--- a/src/_includes/layouts/event.html
+++ b/src/_includes/layouts/event.html
@@ -35,7 +35,7 @@
 				<h1>{{ title }}</h1>
 				<small> {% if speakers %} {{ speakers | join: ', ' }} &middot; {% endif %} {{ date | asDateTime }} </small>
 				{{ addToCalendarList }} {{ content }}
-				<p>
+				<div>
 					<span>
 						<svg
 							aria-hidden="true"
@@ -68,10 +68,10 @@
 							/>
 						</svg>
 						<a href="{{ page.inputPath | pageSourcePath }}" target="_blank" rel="noreferrer noopener">
-							Improve this page on Github
+							Improve this page on GitHub
 						</a>
 					</span>
-				</p>
+				</div>
 			</main>
 		</div>
 	</body>
