--- a/src/_includes/layouts/event.html
+++ b/src/_includes/layouts/event.html
@@ -43,6 +43,7 @@
 							role="img"
 							viewBox="0 0 24 24"
 							xmlns="http://www.w3.org/2000/svg"
+							focusable="false"
 						>
 							<title>Discord icon</title>
 							<path
@@ -61,6 +62,7 @@
 							role="img"
 							viewBox="0 0 24 24"
 							xmlns="http://www.w3.org/2000/svg"
+							focusable="false"
 						>
 							<title>GitHub icon</title>
 							<path
